<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="470dp"
        android:contentDescription="@string/app_name"
        android:paddingStart="20sp"
        android:paddingEnd="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486"
        app:srcCompat="@drawable/white_cueve_bg" />

    <Button
        android:id="@+id/b1"
        style="@style/Widget.AppCompat.ButtonBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/video"
        android:textColor="@color/primary_text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b2"
        style="@style/Widget.AppCompat.ButtonBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="casual"
        android:text="@string/audio_player"
        android:textColor="@color/primary_text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/b1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <ImageView
        android:id="@+id/info"
        android:layout_width="39dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/info" />

</android.support.constraint.ConstraintLayout>