<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioPlayer">

    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/select"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ib3"
        app:layout_constraintEnd_toEndOf="@+id/ib3"
        app:layout_constraintStart_toStartOf="@+id/ib3" />

    <SeekBar
        android:id="@+id/pb1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ib3"
        app:layout_constraintStart_toStartOf="@+id/ib3"
        app:layout_constraintTop_toBottomOf="@+id/ib3" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/pb1"
        app:layout_constraintEnd_toStartOf="@+id/pb1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pb1" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/pb1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pb1"
        app:layout_constraintTop_toTopOf="@+id/pb1" />

    <ListView
        android:id="@+id/lv1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/listviewborder"
        android:divider="#FFFFFF"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toTopOf="@+id/t3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/primary_text"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sharp_repeat_24_white"
        app:layout_constraintBottom_toBottomOf="@+id/ib2"
        app:layout_constraintEnd_toStartOf="@+id/ib2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib2" />

    <ImageButton
        android:id="@+id/ib2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/primary_text"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sharp_skip_previous_24_white"
        app:layout_constraintBottom_toBottomOf="@+id/ib3"
        app:layout_constraintEnd_toStartOf="@+id/ib3"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/ib3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@color/primary_text"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_play_arrow_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ib4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/primary_text"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sharp_skip_next_24_white"
        app:layout_constraintBottom_toBottomOf="@+id/ib3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/ib3"
        app:layout_constraintTop_toTopOf="@+id/ib3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/ib5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="@color/primary_text"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sharp_shuffle_24_white"
        app:layout_constraintBottom_toBottomOf="@+id/ib4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ib4"
        app:layout_constraintTop_toTopOf="@+id/ib4" />
</android.support.constraint.ConstraintLayout>